--- a/wildhair.html
+++ b/wildhair.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="transitions.css">
+<link rel="stylesheet" type="text/css" href="javascript-image_big_small.css">
 </head>
 
 <body>
