--- a/wildhair.html
+++ b/wildhair.html
@@ -13,6 +13,10 @@
          <img id="WildHair" src="http://farm3.staticflickr.com/2768/4521546482_eb92859702_m.jpg" width="240" height="236" alt="WILD HAIR UNITED KINGDOM" width="240" height="236"> <p>Click the button to change the size of the image to large or small.</p> <button onclick="myGirl()">MAKE ME LARGE</button> <button onclick="mylilGirl()">MAKE ME SMALL</button>
          </center>  
          </div> 
+         
+  </script>
+  <script src="http://code.angularjs.org/1.2.1/angular.min.js"></script>
+  <script>
 
   
 </body>
