--- a/wildhair.html
+++ b/wildhair.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="javascript-image_big_small.css">
+<link rel="stylesheet" type="text/css" href="bigsmall.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
          </div> 
          
   </script>
-  <script src="http://code.angularjs.org/1.2.1/angular.min.js"></script>
+  <script src="javascript.js"></script>
   <script>
 
   
