--- a/wildhair.html
+++ b/wildhair.html
@@ -10,7 +10,13 @@
  
          <div class="moon">
          <center>  
-         <img id="WildHair" src="http://farm3.staticflickr.com/2768/4521546482_eb92859702_m.jpg" width="240" height="236" alt="WILD HAIR UNITED KINGDOM" width="240" height="236"> <p>Click the button to change the size of the image to large or small.</p> <button onclick="myGirl()">MAKE ME LARGE</button> <button onclick="mylilGirl()">MAKE ME SMALL</button>
+         <img id="WildHair" src="http://farm3.staticflickr.com/2768/4521546482_eb92859702_m.jpg" width="240" height="236" alt="WILD HAIR UNITED KINGDOM" width="240" height="236"> 
+         
+         <br><br>
+            <h4><font size="6"  color="white">
+            <button onclick="myGirl()" style="background-image:url('http://farm3.staticflickr.com/2768/4521546482_eb92859702_m.jpg')">MAKE ME LARGE</button>
+            <button onclick="mylilGirl()" style="background-image:url('http://farm3.staticflickr.com/2768/4521546482_eb92859702_m.jpg')">make me small</button>
+            </font></h4>
          </center>  
          </div> 
          
